Changes in version 0.2
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Issue 18: Generalized the run-time engine to support executing test
  programs that implement different interfaces.  Test programs that use
  the ATF libraries are just a special case of this.

* Issue 18: Added support to the engine to run "plain" test programs:
  i.e. test programs that do not use any framework and report their
  pass/fail status as an exit code.  This is to simplify the integration
  of legacy test programs into a test suite, and also to demonstrate
  that the run-time engine is generic enough to support different test
  interfaces.

* Issue 11: Added the 'config' subcommand.  This command allows the end
  user to inspect the current configuration variables after evaluation,
  without having to read through configuration files.

* Issue 11: Removed the test_suites_var function from configuration
  files.  This was used to set the value of test-suite-sepecific
  variables, but it was ugly-looking.  It is now possible to use the
  more natural syntax 'test_suites.<test-suite-name>.<variable> =
  <value>'.


Changes in version 0.1
======================

Experimental version released on June 23rd, 2011.

This is the first public release of the kyua-cli package.

The scope of this release is to provide functional replacement for the
'atf-run' utility included in the atf package.  At this point, 'kyua'
can reliably run the NetBSD 5.99.53 test suite delivering the same
results as 'atf-run'.

The reporting facilities of this release are quite limited.  There is
no replacement for 'atf-report' yet, and there is no easy way of
debugging failing test programs other than running them by hand.  These
features will mark future milestones and therefore be part of other
releases.

Be aware that this release has suffered very limited field testing.
The test suite for kyua-cli is quite comprehensive, but some bugs may
be left in any place.