@@ -1,4 +1,4 @@
-# Copyright 2010 Google Inc.
+# Copyright 2010, 2011 Google Inc.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -27,14 +27,18 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 BUILTIN_STL_SUPPORT = YES
+ENABLE_PREPROCESSING = YES
+EXPAND_ONLY_PREDEF = YES
 FILE_PATTERNS = *.cpp *.hpp *.ipp
 GENERATE_LATEX = NO
 GENERATE_TAGFILE = @top_builddir@/api-docs/api-docs.tag
 INPUT = @top_srcdir@
 INPUT_ENCODING = ISO-8859-1
 JAVADOC_AUTOBRIEF = YES
+MACRO_EXPANSION = YES
 OUTPUT_DIRECTORY = @top_builddir@/api-docs
 OUTPUT_LANGUAGE = English
+PREDEFINED = "UTILS_UNUSED_PARAM(name)=unused_ ## name"
 PROJECT_NAME = "@PACKAGE_NAME@"
 PROJECT_NUMBER = @VERSION@
 QUIET = YES
