@@ -49,6 +49,7 @@ AC_PROG_CXX
 KYUA_REQUIRE_CXX
 KYUA_DEVELOPER_MODE([C++])
 KYUA_ATTRIBUTE_NORETURN
+KYUA_ATTRIBUTE_UNUSED
 KYUA_FS_UNMOUNT
 KYUA_GETOPT_WITH_OPTRESET
 KYUA_LAST_SIGNO
