@@ -1,4 +1,4 @@
-// Copyright 2010 Google Inc.
+// Copyright 2010, 2011 Google Inc.
 // All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
@@ -37,6 +37,23 @@
 
 /// Attribute to mark a function as non-returning.
 #define UTILS_NORETURN @ATTRIBUTE_NORETURN@
+
+
+/// Attribute to mark an entity as unused.
+#define UTILS_UNUSED @ATTRIBUTE_UNUSED@
+
+
+/// Macro to mark a parameter as unused.
+///
+/// This macro has to be called on the name of a parameter during the
+/// definition (not declaration) of a function.  When doing so, it declares
+/// the parameter as unused to silence compiler warnings and also renames
+/// the parameter by prefixing "unused_" to it.  This is to ensure that the
+/// developer remembers to remove the call to this macro from the parameter
+/// when he actually starts using it.
+///
+/// \param name The name of the function parameter to mark as unused.
+#define UTILS_UNUSED_PARAM(name) unused_ ## name UTILS_UNUSED
 
 
 #endif  // !defined(UTILS_DEFS_HPP)
